header align fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
     margin: auto;
     display: flex;
 	justify-content: center;
+	margin-bottom: 80px;
 }
 
 .header-menu {
@@ -19,6 +20,11 @@
 	display: flex;
 	flex-direction: row;
 	gap: 20px;
+	width: 1240px;
+}
+
+.header-menus {
+	white-space: nowrap;
 }
 
 .header-menu-left {
@@ -27,8 +33,10 @@
 	align-items: center;
 	border: 1px solid rgba(255, 255, 255, 0.2);
 	border-radius: 12px;
-	gap: 209px;
+	gap: 136px;
 	width: 982px;
+	position: relative;
+    overflow: hidden;
 }
 
 .header-menu-list {
@@ -44,11 +52,14 @@
 	font-size: 14px;
 	text-transform: uppercase;
 	color: var(--white);
+	cursor: pointer;
 }
 
 .icon-logo {
+	margin-left: 50px;
 	width: 124px;
 	height: 16px;
+	cursor: pointer;
 }
 
 .sign-up-button {
@@ -62,6 +73,8 @@
 	line-height: 1.5;
 	text-transform: uppercase;
 	color: var(--black);
+	white-space: nowrap;
+	cursor: pointer;
 }
 
 /* header end */
